# url-shortener

./: .env.example  .gitignore  C4-Model.dsl  Dockerfile  README.md  compose.yml  docker-compose.yml  dockerfile
.github/workflows/: auto-run-ruff.yaml  auto-test-pytest-and-auto-lint-ruff.yml  auto-test-pytest.yml  integration-pipeline.yaml  integration.yaml  publish.yml  structurizr-diagrams-update.yml  update-diagram.yml
.gitnub/workflows/: structurizr-diagrams-update.yml
Architecture/: C4-Model.dsl
analytics-service/: pyproject.toml
api/: .coverage  .coveragerc  .env.example  .releaserc  CHANGELOG.md  Dockerfile  pyproject.toml  ruff.toml
api/api/: __init__.py  adapter_to_message_broker.py  api.py  auth.py  cache.py  db.py  fakedb.py  logger.py  main.py  message_broker.py  models.py  release.py
api/neojelll_url_shortener_api/: api.py  cache.py  message_broker.py
api/tests/: test_api.py  test_cache.py  test_db.py  test_main.py  test_message_broker.py
architecture/: c4-model.dsl  pyproject.toml
architecture/architecture/: c4-model.py
architecture/plantuml/: structurizr-Container-001-key.puml  structurizr-Container-001.puml  structurizr-Dynamic-001-key.puml  structurizr-Dynamic-001.puml
architecture/tests/: test_pass.py
expiration-manager/: pyproject.toml
expiration-manager/expiration-manager/: db.py
expiration-manager/expiration_manager/: db.py  logger.py  manager.py
expiration-manager/tests/: test_db.py  test_manager.py
expiration_manager/: Dockerfile  pyproject.toml
expiration_manager/expiration_manager/: db.py  logger.py  manager.py
expiration_manager/tests/: test_db.py  test_manager.py
initdb.d/: init.sql
service/: pyproject.toml
service/service/: cache.py  db.py  logger.py  main.py  message_broker.py  models.py  shortener_service.py
service/tests/: test_cache.py  test_db.py  test_message_broker.py  test_shortener_service.py
telegram_bot/: .env.example  Dockerfile  pyproject.toml
telegram_bot/telegram_bot/: bot.py  logger.py  main.py  validate.py
telegram_bot/tests/: test_pass.py
url_shortener_service/: Dockerfile  pyproject.toml
url_shortener_service/tests/: test_cache.py  test_db.py  test_message_broker.py  test_shortener_service.py
url_shortener_service/url_shortener_service/: cache.py  db.py  logger.py  main.py  message_broker.py  shortener_service.py
