[tool.poetry]
name = "neojelll-url-shortener-api"
version = "0.1.1rc05"
description = ""
authors = ["neojelll <timofejmitusin60892@gmail.com>"]
readme = "README.md"

packages = [
	{ include = "api" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
kafka-python-ng = "^2.2.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
redis = "^5.0.8"
loguru = "^0.7.2"
pytest-asyncio = "^0.24.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
neojelll-url-shortener-api = "api.main:run"

[tool.ruff]
target-version = "py312"
indent-width = 4
fix = true

[tool.ruff.format]
indent-style = "space"

[lint]
ignore = ["E501"]
