[tool.poetry]
name = "expiration-manager"
version = "0.1.0"
description = ""
authors = ["deadonted <timofejmitusin60892@gmail.com>"]
readme = "README.md"

packages = [
	{ include = "expiration-manager" }
]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
indent-width = 4
fix = true

[tool.ruff.format]
indent-style = "space"

[lint]
ignore = ["E501"]
