[tool.poetry]
name = "neojelll-url-shortener-service"
version = "0.1.8"
description = ""
authors = ["neojelll <timofejmitusin60892@gmail.com>"]
readme = "README.md"

packages = [
	{ include = "service" }
]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
loguru = "^0.7.2"
redis = "^5.1.1"
aiokafka = "^0.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
neojelll-url-shortener-service = "service.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=service --cov-report term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = [
    "service/logger.py",
    "service/main.py",
    ]

[tool.ruff]
target-version = "py312"
indent-width = 4
fix = true

[tool.ruff.format]
indent-style = "space"

[lint]
ignore = ["E501"]
