[tool.poetry]
name = "neojelll-url-shortener-telegram-bot"
version = "0.2.17"
description = ""
authors = ["neojelll <timofejmitusin60892@gmail.com>"]
readme = "README.md"

packages = [
	{ include = "telegram_bot"}
]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.14.0"
aiohttp = "^3.10.10"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
neojelll-url-shortener-telegram-bot = "telegram_bot.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=telegram_bot --cov-report term-missing --cov-fail-under=100"

[tool.coverage.run]
omit = [
	"telegram_bot/main.py",
	"telegram_bot/logger.py",
	"telegram_bot/validate.py",
	"telegram_bot/bot.py",
]

[tool.ruff]
target-version = "py312"
indent-width = 4
fix = true

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[lint]
ignore = ["E501"]
